--- a/App.css
+++ b/App.css
@@ -1,208 +1,141 @@
-.App {
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  /* box-sizing: border-box;
+  margin: 0;
+  padding: 0; */
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-img {
-  width: 80px;
-  position: absolute;
-  margin-left: 10px;
-  margin-top: -10px;
-  border-radius: 100px;
-  border: 2px solid;
-  border-color: white;
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
-.gridcontainer {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  justify-content: space-around;
-}
-.grid {
+header {
   display: flex;
-  gap: 2%;
-  margin-left: 30px;
-}
-.request {
-  position: absolute;
-  margin-top: 27%;
-  margin-left: -20%;
-  width: 150px;
-  height: 35px;
-  border-radius: 5px;
-  background-color: #3751e4;
-  color: white;
-  font-weight: bold;
-}
-.request:hover {
-  transform: scale(1.05, 1.05);
-  transition: 0.75s;
-}
-.pages {
-  margin-left: 570px;
-  margin-top: 100px;
-  position: absolute;
-}
-.num_but:hover {
-  background-color: #3751e4;
-  color: white;
-}
-.griditem {
-  border: 2px solid;
-  width: 403px;
-  border-radius: 42px;
-  height: 350px;
-  border-color: rgb(54, 80, 228);
-  overflow: hidden;
-}
-h1 {
-  margin-left: 50px;
-  margin-bottom: 100px;
-}
-.fastar {
-  margin-left: 45px;
-  margin-top: 35px;
+  width: 106.4%;
+  height: 100px;
+  background-color: silver;
+  margin-left: -75px;
+  margin-top: -60px;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  /* position: fixed; */
 }
 .flex {
   display: flex;
-  margin-top: 100px;
-  /* margin-left: 20px; */
 }
-h4 {
+.butt {
+  color: white;
+}
+
+h2 {
+  margin-left: 10px;
+  padding-top: 20px;
+  font-weight: bold;
+}
+.span1 {
+  color: red;
+}
+.span2 {
+  color: green;
+}
+nav {
   margin-left: 100px;
+}
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding-top: 20px;
+  padding-right: 30px;
+}
+nav ul li a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+nav ul li a:hover {
+  color: red;
+  transition: 0.55s;
+}
+button {
+  background-color: red;
+  height: 40px;
+  border-radius: 20px;
+  width: 100px;
+  margin-left: -50px;
+  margin-top: 20px;
+}
+button a {
+  text-decoration: none;
+  color: white;
+}
+
+button a:hover {
+  color: white;
+}
+button:hover {
+  transform: scale(1.025, 1.025);
+  transition: 0.55s;
+  border-color: red;
+  background-color: black;
+}
+.top {
+  display: flex;
+  padding-top: 200px;
+  background-image: url(./images/image6.jpg);
+  background-repeat: no-repeat;
+  width: 106.3%;
+  margin-left: -43px;
+  height: 400px;
+}
+.toggle {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 31px;
+  height: 21px;
+}
+.bar {
+  height: 3px;
+  width: 100px;
+  background-color: white;
+  border-radius: 10px;
+}
+.obi {
+  width: 400px;
+  margin-left: 350px;
   margin-top: 50px;
 }
-.flex::before {
-  content: "";
-  position: absolute;
-  width: 420px;
-  height: 30%;
-  background: url(./images/Rectangle225.png);
-  background-repeat: no-repeat;
-  margin-top: -5px;
-}
-p {
+.h1 {
+  color: white;
+  font-size: 80px;
+  margin-left: 50px;
   margin-bottom: -20px;
-  font-weight: bold;
+  margin-top: -80px;
+}
+.but1 {
+  background-color: red;
+  width: 270px;
   color: white;
-  font-size: large;
-  margin-left: 70px;
+  height: 45px;
+  border-radius: 20px;
+  font-size: 19px;
+  margin-left: 20px;
+  margin-top: 30px;
 }
-.cover {
-  margin-top: -20px;
-}
-.pass {
-  margin-top: 17px;
-  color: white;
-  margin-left: 80px;
-  position: absolute;
-}
-.right {
-  position: absolute;
-  margin-top: 20px;
-  margin-left: 80px;
-}
-.imgs {
-  position: absolute;
-  margin-top: -100px;
-}
-@media screen and (max-width: 1023px) {
-  /* .App{
-    align-items: center;
-    margin-left: 15%;
-    margin-right: 15%;
-  } */
-  .grid {
-    flex-direction: column;
-    margin-top: -100px;
-    margin-left: 8%;
-    position: absolute;
-  }
-  .griditem {
-    margin-top: 80px;
-  }
-  .request {
-    position: absolute;
-    margin-top: 440px;
-    margin-left: -280px;
-  }
-  .App {
-    overflow: hidden;
-  }
-  h1 {
-    margin-left: 90px;
-    font-size: 100%;
-    font-weight: bolder;
-  }
-  .pages {
-    position: absolute;
-    margin-left: 150px;
-    padding-top: 1160px;
-  }
-  h4 {
-    position: relative;
-  }
+.logo {
+  width: 70px;
+  padding-top: 20px;
+  margin-left: 10px;
 }
 
-@media screen and (width: 1024px) {
-  .request {
-    position: absolute;
-    margin-top: 360px;
-    margin-left: -230px;
-  }
-  .right {
-    align-items: center;
-    margin-left: 40px;
-  }
-  .griditem{
-    width: 303px;
-  }
-  h4{
-    margin-left: 50px;
-  }
-  .flex::before {
-    content: "";
-    position: absolute;
-    width: 305px;
-    height: 30%;
-    background: url(./images/Rectangle225.png);
-    background-repeat: no-repeat;
-    margin-top: -5px;
-    border-bottom-right-radius: 63%;
-    z-index: -10;
-  }
-  .pages{
-    margin-left: 403px;
-  }
-
-}
-@media screen and (width: 1280px) {
-  .request{
-    margin-top: 370px;
-    /* margin-right: -50px; */
-  }
-}
-@media screen and (width: 820px) {
-  .grid{
-    margin-left: 15%;
-  }
-  h1{
-    margin-left: 15%;
-  }
-  .pages{
-    margin-left: 220px;
-  }
-}
-@media screen and (width: 768px) {
-  .grid{
-    margin-left: 15%;
-  }
-  h1{
-    margin-left: 15%;
-  }
-  .pages{
-    margin-left: 220px;
-  }
-}
-@media screen and (width: 912px) {
-  .App{
-    margin-left: 8%;
+@media screen and (max-width: 767px) {
+  header {
+    height: 100px;
   }
 }
